prusti-tests/tests/verify/fail/extern-spec/mismatched-sigs-1.rs
extern crate prusti_contracts;
use prusti_contracts::*;

#[extern_spec]
impl<T> std::vec::Vec<T> {
    /// Wrong number of arguments
    #[ensures(self.len() == old(self.len()) + 1)]
    fn push(&mut self); //~ ERROR takes 2 arguments
}

fn main() {}
